--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,27 @@ img {
   height: 80px;
 }
 
-#my-attach-img {
+#image-attach {
   object-fit: cover;
+}
+
+#div-image {
+  display: flex;
+  position: relative; 
+  justify-content: center;
+}
+
+#img-paragraph {
+  overflow-wrap: break-word;
+  /* word-wrap: break-word; */
+  bottom: 0;
+  z-index: 2;
+  position: absolute;
+  width: 80%;
+  text-shadow: 5px 5px 5px rgb(0,0,0);
+  font-size: 30px;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 900;
 }
